TODO EL PROGRAMA Y LOS CAMBIOS FUNCIONAN BIEN, EL PROGAMA YA NO SE TRABA AL INGRESAR EN VENTAS, DE NADA CHAVOS

--- a/TienditaLapeque ENTREGA/TienditaLapeque/TienditaLapeque.csproj
+++ b/TienditaLapeque ENTREGA/TienditaLapeque/TienditaLapeque.csproj
@@ -96,6 +96,12 @@
     <Compile Include="CalculoVenta.Designer.cs">
       <DependentUpon>CalculoVenta.cs</DependentUpon>
     </Compile>
+    <Compile Include="CambiarContraseña.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CambiarContraseña.Designer.cs">
+      <DependentUpon>CambiarContraseña.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CalculoVenta.resx">
       <DependentUpon>CalculoVenta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CambiarContraseña.resx">
+      <DependentUpon>CambiarContraseña.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
