--- a/TienditaLapeque ENTREGA/TienditaLapeque/TienditaLapeque.csproj
+++ b/TienditaLapeque ENTREGA/TienditaLapeque/TienditaLapeque.csproj
@@ -198,6 +198,7 @@
     <EmbeddedResource Include="ver.resx">
       <DependentUpon>ver.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
